--- a/kotlin/usecases/cognito_flutter_mobile_app/ios/Podfile
+++ b/kotlin/usecases/cognito_flutter_mobile_app/ios/Podfile
@@ -2,7 +2,7 @@
 # platform :ios, "12.0"
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
-ENV["COCOAPODS_DISABLE_STATS"= "true"
+ENV["COCOAPODS_DISABLE_STATS"]= "true"
 
 project "Runner", {
   "Debug" => :debug,
