--- a/kotlin/usecases/cognito_flutter_mobile_app/ios/Podfile
+++ b/kotlin/usecases/cognito_flutter_mobile_app/ios/Podfile
@@ -1,8 +1,8 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, '12.0'
+# platform :ios, "12.0"
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
-ENV["COCOAPODS_DISABLE_STATS"] = "true"
+ENV["COCOAPODS_DISABLE_STATS"]= "true"
 
 project "Runner", {
   "Debug" => :debug,
