--- a/.doc_gen/metadata/cross_metadata.yaml
+++ b/.doc_gen/metadata/cross_metadata.yaml
@@ -762,6 +762,7 @@ cross_Testing:
   title: Example approaches for unit and integration testing with an &AWS; SDK
   title_abbrev: Unit and integration test with an SDK
   synopsis: examples for best-practice techniques when writing unit and integration tests using an &AWS; SDK.
+  category: Scenarios
   languages:
     Rust:
       versions:
