--- a/.doc_gen/metadata/cross_metadata.yaml
+++ b/.doc_gen/metadata/cross_metadata.yaml
@@ -796,3 +796,18 @@ cross_ServerlessPromptChaining:
     bedrock-agent:
     bedrock-agent-runtime:
     sfn:
+cross_ServerlessS3DataTransformation:
+  title: Transform data for your application with S3 Object Lambda
+  title_abbrev: Transform data with S3 Object Lambda
+  synopsis: transform data for your application with S3 Object Lambda.
+  category: Cross-service examples
+  languages:
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/cross-service/S3ObjectLambdaFunction
+          block_content: cross_S3ObjectLambdaFunction.xml
+  service_main: s3
+  services:
+    s3:
+    lambda:
